--- a/index.html
+++ b/index.html
@@ -2,3 +2,10 @@
 layout: home
 # Index page
 ---
+<ul>
+  {% for post in site.posts %}
+    <li>
+      <a href="{{ post.url }}">{{ post.title }}</a>
+    </li>
+  {% endfor %}
+</ul>
